# cohen-u01-to-nwb

./: .gitignore  README.md  make_env.yml  pyproject.toml
.github/workflows/: auto-publish.yml  test-install.yml
notebooks/: cohen_confocal.ipynb  cohen_free_flight_optogenetics.ipynb  dickerson_lab.ipynb  fox_lab_reader.ipynb  kim_lab.ipynb  suver_lab.ipynb
src/: utils.py
src/cohen_lab_to_nwb/: abbyleung_conversion.py  confocal_conversion.py  conversion_notes.md  convert_free_flight_optogenetics_data.py  custom_metadata.yml  free_flight_optogenetics_conversion.py  phantom_video_interface.py  zeiss_confocal_interface.py
src/cohen_lab_to_nwb/AbbyLeung/: AbbyLeung_behaviorinterface.py  AbbyLeung_convert_session.py  AbbyLeung_metadata.yaml  AbbyLeung_notes.md  AbbyLeung_nwbconverter.py
src/cohen_lab_to_nwb/assets/: confocal_metadata.json  experiment_diagram.excalidraw
src/dickerson_lab_to_nwb/: __init__.py  behavior_interface.py  conversion_notes.md  metadata.yaml  paye_conversion.py  payel_conversion.py  thor_interface.py
src/dickerson_lab_to_nwb/assets/: roi_mask_formatted.xml  thor_experiment.xml
src/fox_lab_to_nwb/: behavior.py  camera_utilites.py  conversion.py  conversion_notes.md  metadata.yaml  streets_conversion.py
src/fox_lab_to_nwb/assets/: trialanalysis_photron.m  windtrial.m
src/kim_lab/: kim_conversion.py  ophys.py
src/kim_lab_to_nwb/: behavior.py  conversion_notes.md  kim_conversion.py  metadata.yaml  ophys.py  stimuli.py  trials.py  utils.py
src/suver_lab/: suver_conversion.py
src/suver_lab_to_nwb/: behavioral_data_conversion.py  coco_conversion.py  conversion_notes.md  metadata.yaml  patch_clamp_interface.py  seal_test_interface.py  speedy_bars_conversion.py  suver_conversion.py  windy_steps_conversion.py
src/suver_lab_to_nwb/assets/: ComputeCellStats.m  RunExperiment_JONsEffect.m  SaveSingleSealTest.m
