[project]
name = "cohen_lab_to_nwb"
version = "0.0.1"
description = "NWB conversion scripts, functions, and classes for Cohen  conversion"
readme = "README.md"
authors = [{ name = "CatalystNeuro", email = "ben.dichter@catalystneuro.com" }]
maintainers = [{ name = "CatalystNeuro", email = "ben.dichter@catalystneuro.com" }]
license = { file = "LICENSE" }
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
  "neuroconv[video]",
  "nwbinspector",
  "roiextractors",
  "tifffile",
  "pymatreader",
  "skimage", # for the Kim lab conversion polygon mask
  "czifile", # for the Cohen lab conversion confocal images
]

[project.urls]
Repository="https://github.com/catalystneuro/cohen-lab-to-nwb"

[build-system]
requires = ["setuptools>=64.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
include = ["*"]

[tool.black]
line-length = 120
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  \.toml
  |\.yml
  |\.md
  |\.txt
  |\.sh
  |\.git
  |\.ini
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
reverse_relative = true
known_first_party = ["cohen_lab_to_nwb"]
