[project]
name = "cohen_lab_to_nwb"
version = "0.0.1"
description = "NWB conversion scripts, functions, and classes for Cohen  conversion"
readme = "README.md"
authors = [{ name = "CatalystNeuro", email = "ben.dichter@catalystneuro.com" }]
maintainers = [{ name = "CatalystNeuro", email = "ben.dichter@catalystneuro.com" }]
license = { file = "LICENSE" }
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
  "neuroconv[video]>=0.7.4",
  "roiextractors>=0.5.13",
  "ndx-pose>=0.2.1",
  "tifffile", # For reading tiffs
  "pymatreader", # For reading matlab (most conversions
  "scikit-image", # for the Kim lab conversion polygon mask
  "lxml", # For Dickerson lab conversion
  "czifile", # for the Cohen lab conversion confocal images
  "pynwb>=3.0.0",
  "natsort>=8.4.0",
]

[project.urls]
Repository="https://github.com/catalystneuro/cohen-lab-to-nwb"

[build-system]
requires = ["setuptools>=64.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
include = ["*"]

[tool.black]
line-length = 120
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  \.toml
  |\.yml
  |\.md
  |\.txt
  |\.sh
  |\.git
  |\.ini
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
reverse_relative = true
known_first_party = ["cohen_lab_to_nwb"]
